REGRESSION(4.0.4-42a12): With 2 highlighted lines of text in gmail/hotmail selecting Bold selects other 2 edit buttons automatically. <rdar://problem/7442065> https://bugs.webkit.org/show_bug.cgi?id=32285

Reviewed by Darin Adler.

WebCore:

When examining the styles of the nodes after the first in a range selection, we take into
cosideration differences in style of txt nodes only.

Test: editing/execCommand/queryCommandState-02.html

* editing/Editor.cpp:
(WebCore::Editor::selectionHasStyle):

LayoutTests:

* editing/execCommand/queryCommandState-02-expected.txt: Added.
* editing/execCommand/queryCommandState-02.html: Added.
* editing/execCommand/script-tests/toggle-compound-styles.js: Fixed typo in text.
* platform/mac/editing/execCommand/toggle-compound-styles-expected.txt: Fixed typo in text.
* platform/qt/editing/execCommand/toggle-compound-styles-expected.txt: Fixed typo in text.
* platform/win/editing/execCommand/toggle-compound-styles-expected.txt: Fixed typo in text.



Canonical link: https://commits.webkit.org/43390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51965 268f45cc-cd09-0410-ab3c-d52691b4dbfc